Fix confirm dialog text align

--- a/src/components/ConfirmDialog/ConfirmDialog.scss
+++ b/src/components/ConfirmDialog/ConfirmDialog.scss
@@ -17,7 +17,7 @@
   }
 
   .actions {
-    text-align: start;
+    text-align: end;
     padding-top: 16px;
     width: 100%;
   }
